[package]
name = "ring_buffer_max"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Keep track of the max value of ring buffer in linear time."
readme = "README.md"
homepage = "https://github.com/elisedemarie/ring_buffer_max"
repository = "https://github.com/elisedemarie/ring_buffer_max"
keywords = ["max", "ring", "buffer", "queue", "circular"]
categories = ["data-structures", "algorithms"]
